# sample-once-upon-agentic-ai

./: .gitignore  404.html  README.md  angular.json  index.html  main-MXHSDVP6.js  pyproject.toml  requirements.txt  vite.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: main.yaml  ui.yaml
0_pre_requisites/: README.md
1_strands_basics/: README.md  simple_agent.py
2_built_in_tools/: README.md  agent_with_built_in_tools.py  bonus_quest.py
3_custom_tools/: README.md  agent_with_dice_roll_tool.py
4_mcp_integration/: README.md  dice_roll_mcp_server.py  gamemaster_mcp_client.py
5_a2a_integration/: README.md
5_a2a_integration/test/: test.http
5_a2a_integration/utils/: workshop_utils.py
6_agentcore/: .env.example  README.md  a2a_requirements.txt  character_agent.py  deploy_agent.sh  gamemaster.py  mcp_requirements.txt  requirements.txt
6_agentcore_mcp/: dice_mcp_server.py
assets/: index-4rZ8VR2b.css  index-BMxmRF2A.css  index-Bcl4JI_2.js  index-CDTyYjnu.js  index-CEXqZL7u.js  index-CR51ORVg.js  index-Cdw7Ypbc.css  index-CeqPC2sg.css  index-CgrnFPHo.js  index-CndwvQq9.css  index-D--ZpEXX.js  index-Db5GnZhC.js  index-DgAa4FRB.css  index-K2Wz_eqp.js  index-NSXoPVur.css  index-a0F-Uvbl.js
src/: index.html
src/app/game/: game.ts  (+1 more)
src/components/: CharacterStatsPanel.vue  CharacterStatsPanel.vue.js  DiceDisplay.vue  DiceDisplay.vue.js  MessageList.vue  PlayerInput.vue  PlayerInput.vue.js
src/router/: index.js  index.ts
src/utils/: messageParser.js  messageParser.ts
tests/: conftest.py  test_a2a_factory.py  test_a2a_integration.py
(+8 files in other folders)
