[project]
name = "once-upon-agentic-ai"
version = "1.0.0"
description = "A comprehensive workshop for mastering AI agent development with Strands framework"
requires-python = ">=3.10"
dependencies = [
    # Strands AI Framework — floor pinned because chapter 5 relies on the
    # A2AServer(agent_factory=...) API introduced in 1.44.
    "strands-agents[a2a]>=1.44",
    "strands-agents-tools",

    # Web Framework for APIs
    "fastapi[standard]",
    "pydantic",
    "uvicorn",

    # Configuration Management
    "python-dotenv",

    # Knowledge Base & Document Processing
    "chromadb",
    "PyPDF2",

    # Database
    "tinydb",

    # LangChain Integration
    "langchain_aws",
    "langchain_chroma",

    # Ollama Integration
    "ollama",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
